# translate-subtitles

./: .gitignore  README.md  config.json  glossary.json  merge_srt.py  pyproject.toml  test_bilingual.srt  test_chinese_only.srt  test_minimal.srt  test_subtitles.srt  translate_subtitles.py
